--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Embragues Independencia</title>
-    <link rel="shortcut icon" href="/banner/logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="/Css/reset.css/reset.css">
-    <link rel="stylesheet" href="/Css/style.css">
+    <link rel="shortcut icon" href="banner/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="Css/reset.css/reset.css">
+    <link rel="stylesheet" href="Css/style.css">
     
 </head>
 <body>
