--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <header class="header">
       <nav class="nav">
         <div class="nav__logo">
-            <img src="/banner/logo.png" alt="Logo Engranajes" class="nav__img">
+            <img src="banner/logo.png" alt="Logo Engranajes" class="nav__img">
             <p>Embragues Independencia</p>
         </div>
         <ul class="nav__list">
-          <li><a href="/index.html" class="nav__link">Inicio</a></li>
+          <li><a href="index.html" class="nav__link">Inicio</a></li>
           <li><a href="./templates/productos.html" class="nav__link">Productos</a></li>
           <li></i><a href="./templates/contacto.html" class="nav__link">Contacto</a></li>
         </ul>
@@ -34,12 +34,12 @@
           </p>
         </div>
         <div class="presentation__img">
-          <img src="/banner/nosotros.png" alt="Discos de embragues">
+          <img src="banner/nosotros.png" alt="Discos de embragues">
         </div>
       </div>
       <section class="products">
         <div class="products__img">
-          <img src="/banner/productoEmbrague.png" alt="Embrague">
+          <img src="banner/productoEmbrague.png" alt="Embrague">
         </div>
         <div class="products__description">
           <div class="description">
@@ -66,11 +66,11 @@
           <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13408.458907487917!2d-68.8073157!3d-32.8422139!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x967e0f5266b96cfd%3A0xa2ee18304e147240!2sEmbragues%20Independencia!5e0!3m2!1ses-419!2sar!4v1687373207833!5m2!1ses-419!2sar" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </section>
       <section class="marcas">
-        <img src="/banner/marcas.jpg" alt="Marcas Trabajadas">
+        <img src="banner/marcas.jpg" alt="Marcas Trabajadas">
       </section>
     <div class="whatsapp-button">
       <a href="https://api.whatsapp.com/send?phone=2612147098" target="_blank" >
-        <img src="/banner/whatsapp.png" alt="WhatsApp">
+        <img src="banner/whatsapp.png" alt="WhatsApp">
       </a>
     </div>
     </main>
@@ -88,7 +88,7 @@
         </div>
         <div class="footer__logo">
           <div class="logo">
-            <img src="/banner/logo.png" alt="Logo Engranajes" class="nav__img">
+            <img src="banner/logo.png" alt="Logo Engranajes" class="nav__img">
             <p>Embragues Independencia</p>
           </div>
         </div>
