arreglo del menú hamburguesa

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a href="index.html"><img src="banner/logotipo.png" alt="Logo Engranajes" class="nav__img--logo"></a>
         </div>
         <button type="button" class="nav__button" id="nav__open"><i class="fa-solid fa-bars"></i></button>
-        <button type="button" class="nav__button--close" id="nav__close"><i class="fa-solid fa-xmark"></i></i></button>
+        <button type="button" class="nav__button nav__button--close" id="nav__close"><i class="fa-solid fa-xmark"></i></button>
         <ul class="nav__list" id="nav__mobile">
           <li><a href="index.html" class="nav__link">Inicio</a></li>
           <li><a href="./templates/productos.html" class="nav__link">Productos</a></li>
