adapté la sección productos a mobile

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="presentation">
         <div class="presentation__description">
           <h1>Líder en embragues y frenos</h1>
-          <p>Somos una pyme dedicada a la venta y reparacion de frenos y embragues, realizamos la venta de repuestos de los mismos y trabajamos con marcas de primera calidad. Contamos con mas de 15 años de trayectoria en el rubro y profesionales a  la altura de las cricunstacias.
+          <p>Somos una pyme dedicada a la venta y reparación de frenos y embragues, realizamos la venta de repuestos de los mismos y trabajamos con marcas de primera calidad. Contamos con mas de 15 años de trayectoria en el rubro y profesionales a  la altura de las cricunstacias.
           </p>
         </div>
         <div class="presentation__img">
