--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <div class="carousel-item active products__description">
             <div class="grillas">
               <img src="banner/productoEmbrague.png" class=" products__img" alt="Juego de embragues">
-              <div class=" description">
+              <div class="description">
                 <h2>Embragues</h2>
                 <p class="intro__text">En embragues independencia realizamos la venta de todo tipo de embragues por encargo, ya sea
                   autos, camionetas, camiones, maquinaria. También se realiza la reaparación de los mismos con garantía y la rectificación del volante.
@@ -66,7 +66,8 @@
         </div>
         <div class="button-container">
             <button class="carousel-control-prev ms-5 d-none d-sm-block button" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-              <span >Anterior</span>
+              <span  aria-hidden="true">Anterior</span>
+              <span class="visually-hidden">Previous</span>
             </button>
             <button class="carousel-control-next me-5 d-none d-sm-block button" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
               <span>Siguiente</span>
