correccion padding a descripcion

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="location__desciption">
           <h3>Ubicación</h3>
           <span>Nos encontramos en calle independencia 2410 de Las Heras, Mendoza.</span>
-          <span>Nuestros horarios son: 08:30 a 13:00hs-14:30 a18:30hs.</span>
+          <span>Nuestros horarios son: Lunes a viernes de 08:30 a 13:00hs - 14:30 a18:30hs.</span>
         </div>
           <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13408.458907487917!2d-68.8073157!3d-32.8422139!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x967e0f5266b96cfd%3A0xa2ee18304e147240!2sEmbragues%20Independencia!5e0!3m2!1ses-419!2sar!4v1687373207833!5m2!1ses-419!2sar" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </section>
