agregue sass y ordene por componentes

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="carousel-inner detalle__producto">
           <div class="carousel-item active products__description">
             <div class="grillas">
-              <img src="banner/productoEmbrague.png" class=" products__img" alt="Juego de embragues">
+              <img src="banner/productoEmbrague.png" class="products__img" alt="Juego de embragues">
               <div class="description">
                 <h2>Embragues</h2>
                 <p class="intro__text">En embragues independencia realizamos la venta de todo tipo de embragues por encargo, ya sea
@@ -85,11 +85,11 @@
       <section class="marcas">
         <img src="banner/marcas.jpg" alt="Marcas Trabajadas">
       </section>
-    <div class="whatsapp-button">
-      <a href="https://api.whatsapp.com/send?phone=2612147098" target="_blank" >
-        <img src="banner/whatsapp.png" alt="WhatsApp">
-      </a>
-    </div>
+      <div class="whatsapp-button">
+        <a href="https://api.whatsapp.com/send?phone=2612147098" target="_blank" >
+          <img src="banner/whatsapp.png" alt="WhatsApp">
+        </a>
+      </div>
     </main>
     <!-- ----------------footer----------------- -->
     <footer class="footer">
@@ -105,13 +105,13 @@
         </div>
         <div class="footer__logo">
           <div class="logo">
-            <img src="banner/logo.png" alt="Logo Engranajes" class="nav__img">
+            <img src="banner/logo.png" alt="Logo Engranajes" class="logo__img">
             <p>Embragues Independencia</p>
           </div>
         </div>
         <div class="footer__social">
           <h3>Social</h3>
-          <div class="social__link ">
+          <div class="social__link">
             <a href="" target="_blank"><i class="fa-brands fa-instagram fa-2xl"></i></a>
             <a href="https://www.facebook.com/profile.php?id=100063697459863" target="_blank"><i class="fa-brands fa-facebook fa-2xl"></i></i></a>
             <a href="https://api.whatsapp.com/send?phone=2612147098" target="_blank"><i class="fa-brands fa-whatsapp fa-2xl"></i></a>
