--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Sitio web de venta y reparación de embragues">
+    <meta name="keywords" content="Embrague,Freno,repuestos">
     <title>Embragues Independencia</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="shortcut icon" href="banner/logo.png" type="image/x-icon">
@@ -58,18 +60,17 @@
               <img src="banner/freno.png" class="products__img" alt="Fenos a disco">
               <div class="description">
                 <h2>Frenos</h2>
-                <p class="intro__text">Ralizamos el recambio de frenos, tanto como cambio de cintas, rectificación de campanas, venta de pastillas de frenos, cubetas y otros productos.</p>
+                <p class="intro__text">Realizamos el recambio de frenos, tanto como cambio de cintas, rectificación de campanas, venta de pastillas de frenos, cubetas y otros productos.</p>
                 <a href="#"><button type="button" class="button button--products">Ver Productos</button></a>
               </div>
             </div>
           </div>
         </div>
         <div class="button-container">
-            <button class="carousel-control-prev ms-5 d-none d-sm-block button" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-              <span  aria-hidden="true">Anterior</span>
-              <span class="visually-hidden">Previous</span>
+            <button class="carousel-control-prev ms-sm-5  button btn-mob" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+              <span id="anterior">Anterior</span>
             </button>
-            <button class="carousel-control-next me-5 d-none d-sm-block button" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+            <button class="carousel-control-next me-sm-5  button btn-mob" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
               <span>Siguiente</span>
             </button>
         </div>
