agregue mixins, transiciones al nav y termine sass

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -84,9 +84,9 @@
           <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13408.458907487917!2d-68.8073157!3d-32.8422139!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x967e0f5266b96cfd%3A0xa2ee18304e147240!2sEmbragues%20Independencia!5e0!3m2!1ses-419!2sar!4v1687373207833!5m2!1ses-419!2sar" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </section>
       <section class="marcas">
-        <img src="banner/marcas.jpg" alt="Marcas Trabajadas">
+        <img src="banner/marcas.jpg" alt="Marcas Autos">
       </section>
-      <div class="whatsapp-button">
+      <div class="whatsapp-button ">
         <a href="https://api.whatsapp.com/send?phone=2612147098" target="_blank" >
           <img src="banner/whatsapp.png" alt="WhatsApp">
         </a>
