--- a/index.html
+++ b/index.html
@@ -66,9 +66,14 @@
             </div>
           </div>
         </div>
+        <div class="carousel-indicators ">
+          <button type="button"  data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active indicadores" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" class="indicadores" aria-label="Slide 2"></button>
+        </div>
         <div class="button-container">
             <button class="carousel-control-prev ms-sm-5  button btn-mob" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-              <span id="anterior">Anterior</span>
+              <span>Anterior</span>
+              <span class="visually-hidden">Previous</span>
             </button>
             <button class="carousel-control-next me-sm-5  button btn-mob" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
               <span>Siguiente</span>
