--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Sitio web de venta y reparación de embragues">
-    <meta name="keywords" content="Embrague,Freno,repuestos">
+    <meta name="description" content="Optimiza el rendimiento de tu vehículo con nuestro taller especializado en embragues y frenos. Nuestros expertos te brindarán servicios de diagnóstico, reparación y mantenimiento para asegurar tu seguridad en la carretera. Confía en nosotros para mantener tus sistemas de embrague y frenado en óptimas condiciones">
+    <meta name="robots" content="index,follow">
     <title>Embragues Independencia</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="shortcut icon" href="banner/logo.png" type="image/x-icon">
@@ -49,7 +49,7 @@
               <div class="description">
                 <h2>Embragues</h2>
                 <p class="intro__text">En embragues independencia realizamos la venta de todo tipo de embragues por encargo, ya sea
-                  autos, camionetas, camiones, maquinaria. También se realiza la reaparación de los mismos con garantía y la rectificación del volante.
+                  autos, camionetas, camiones, maquinaria. También se realiza la reaparación de los mismos con garantía más la rectificación del volante.
                 </p>
                 <a href="./templates/productos.html"><button type="button" class="button button--products">Ver Productos</button></a>
               </div>
